feat: add metric allergies
